--- a/prepros-6.config
+++ b/prepros-6.config
@@ -17,7 +17,14 @@
     ],
     "hideUnwatchedFiles": false
   },
-  "imports": [],
+  "imports": [
+    {
+      "path": "SCSS/components/second-section-we-best.scss",
+      "imports": [
+        "SCSS/components/first-section-we-do.scss"
+      ]
+    }
+  ],
   "projectView": {
     "selectedView": "log"
   },
