--- a/prepros-6.config
+++ b/prepros-6.config
@@ -23,6 +23,12 @@
       "imports": [
         "SCSS/components/first-section-we-do.scss"
       ]
+    },
+    {
+      "path": "SCSS/components/third-section-reviews.scss",
+      "imports": [
+        "SCSS/components/first-section-we-do.scss"
+      ]
     }
   ],
   "projectView": {
