--- a/prepros-6.config
+++ b/prepros-6.config
@@ -29,6 +29,16 @@
       "imports": [
         "SCSS/components/first-section-we-do.scss"
       ]
+    },
+    {
+      "path": "SCSS/style.scss",
+      "imports": [
+        "SCSS/layout/mixinsandvars.scss",
+        "SCSS/components/first-section-we-do.scss",
+        "SCSS/components/second-section-we-best.scss",
+        "SCSS/components/third-section-reviews.scss",
+        "SCSS/layout/fonts.scss"
+      ]
     }
   ],
   "projectView": {
