--- a/prepros-6.config
+++ b/prepros-6.config
@@ -37,6 +37,7 @@
         "SCSS/components/first-section-we-do.scss",
         "SCSS/components/second-section-we-best.scss",
         "SCSS/components/third-section-reviews.scss",
+        "SCSS/components/order.scss",
         "SCSS/layout/fonts.scss"
       ]
     }
