--- a/prepros-6.config
+++ b/prepros-6.config
@@ -40,6 +40,8 @@
         "SCSS/components/team.scss",
         "SCSS/components/menu.scss",
         "SCSS/components/order.scss",
+        "SCSS/components/map.scss",
+        "SCSS/components/footer.scss",
         "SCSS/layout/fonts.scss"
       ]
     }
