--- a/prepros-6.config
+++ b/prepros-6.config
@@ -36,10 +36,12 @@
         "SCSS/layout/mixinsandvars.scss",
         "SCSS/components/first-section-we-do.scss",
         "SCSS/components/second-section-we-best.scss",
+        "SCSS/components/slider.scss",
         "SCSS/components/third-section-reviews.scss",
         "SCSS/components/team.scss",
         "SCSS/components/menu.scss",
         "SCSS/components/order.scss",
+        "SCSS/components/video.scss",
         "SCSS/components/map.scss",
         "SCSS/components/footer.scss",
         "SCSS/layout/fonts.scss"
