--- a/prepros-6.config
+++ b/prepros-6.config
@@ -44,7 +44,8 @@
         "SCSS/components/video.scss",
         "SCSS/components/map.scss",
         "SCSS/components/footer.scss",
-        "SCSS/layout/fonts.scss"
+        "SCSS/layout/fonts.scss",
+        "SCSS/layout/media.scss"
       ]
     }
   ],
